src/funcs1.h

apf::FieldShape* getFieldShape(int shape_type, int order, int dim, bool& change_shape);
void end(apf::Mesh* m, apf::MeshIterator* it);
std::size_t countPeers(apf::Mesh* m, int dim);
void getPeers(apf::Mesh*m, int part_nums[]);
int isShared(apf::Mesh* m, apf::MeshEntity* e);
std::size_t countRemotes(apf::Mesh* m, apf::MeshEntity* e);
void getRemotes(int part_nums[], apf::MeshEntity* entities[]);
// mesh warping functions
void setPoint(apf::Mesh2* m, apf::MeshEntity* e, int node, double* coords);
void setParam(apf::Mesh2* m, apf::MeshEntity* e, double* coords);
void acceptChanges(apf::Mesh2* m);
void Verify(apf::Mesh* m);
void getPoint(apf::Mesh* m, apf::MeshEntity* e,  int node, double* coords);
void getParam(apf::Mesh* m, apf::MeshEntity* e, double* coords);
// matched entity functions
bool hasMatching(apf::Mesh* m);
apf::Sharing* getSharing(apf::Mesh* m);
apf::Sharing* getNormalSharing(apf::Mesh* m);
void freeSharing(apf::Sharing* shr);
bool isOwned(apf::Sharing* shr, apf::MeshEntity* e);
std::size_t countCopies(apf::Sharing* shr, apf::MeshEntity* e);
void getCopies(int part_nums[], apf::MeshEntity* entities[]);
int getOwner(apf::Sharing* shr, apf::MeshEntity* e);
bool isSharedShr(apf::Sharing* shr, apf::MeshEntity* e);
std::size_t countMatches(apf::Mesh* m, apf::MeshEntity* e);
void getMatches(int part_nums[], apf::MeshEntity* entities[]);
void printTags(apf::Mesh* m);
void getTopologyMaps(int* tri_edge_verts_in, int* tet_edge_verts_in, int* tet_tri_verts_in);
template <typename T>
bool contains(std::vector<T>& vec, const T val)
{
  return std::find(vec.begin(), vec.end(), val) != vec.end();
}