src/apf.jl


function createSubMeshDG(m_ptr, mshape_ptr, triangulation::AbstractArray{Int32, 2}, elementNodeOffsets::AbstractArray{UInt8, 2}, typeOffsetsPerElement::AbstractArray{Int32, 1}, nodemapPumiToSbp::Array{UInt8, 1}, numberings::AbstractArray{Ptr{Void}, 1}, coords::AbstractArray{Float64, 3})

  # check the the triangulation array is oriented correctly
  @assert size(triangulation, 1) == 3
  
 mnew_ptr =  ccall( (createSubMeshDG_name, pumi_libname), Ptr{Void}, (Ptr{Void}, Ptr{Void}, Int32, Ptr{Int32}, Ptr{UInt8}, Ptr{Int32}, Ptr{UInt8}, Ptr{Ptr{Void}}, Ptr{Float64}), m_ptr, mshape_ptr, size(triangulation, 2), triangulation, elementNodeOffsets, typeOffsetsPerElement, nodemapPumiToSbp, numberings, coords)

 return mnew_ptr
end



function transferFieldDG(m_ptr, mnew_ptr, triangulation::AbstractArray{Int32, 2}, elementNodeOffsets::AbstractArray{UInt8, 2}, typeOffsetsPerElement::AbstractArray{Int32, 1}, numberings::AbstractArray{Ptr{Void}, 1}, field_old, interp_op::AbstractArray{Float64, 2}, field_new)

  # check the the triangulation array is oriented correctly
  @assert size(triangulation, 1) == 3
  @assert size(interp_op, 2) == 3  # the interpolation operator must be 
                                   # 3 x numnodesperlement in row major land
                                   # so, make sure it is numnodesperelement x 3
  
 ccall( (transferFieldDG_name, pumi_libname), Void, (Ptr{Void}, Ptr{Void}, Int32, Ptr{Int32}, Ptr{UInt8}, Ptr{Int32}, Ptr{Ptr{Void}}, Ptr{Cdouble}, Ptr{Void}, Ptr{Void}), m_ptr, mnew_ptr, size(triangulation, 2), triangulation, elementNodeOffsets, typeOffsetsPerElement, numberings, interp_op, field_old, field_new)

 return nothing
end


@doc """
### PumiInterface.transferField

  Transfers the specified field from the hold mesh to the new mesh.

  See createSubMesh for the meanings of the arguments
"""->
function transferField(m_ptr, mnew_ptr, triangulation::AbstractArray{Int32, 2}, elementNodeOffsets::AbstractArray{UInt8, 2}, typeOffsetsPerElement::AbstractArray{Int32, 1}, numberings::AbstractArray{Ptr{Void}, 1}, field_old, field_new)

  # check the the triangulation array is oriented correctly
  @assert size(triangulation, 1) == 3
#  @assert size(interp_op, 2) == 3  # the interpolation operator must be 
                                   # 3 x numnodesperlement in row major land
                                   # so, make sure it is numnodesperelement x 3
  
 ccall( (transferField_name, pumi_libname), Void, (Ptr{Void}, Ptr{Void}, Int32, Ptr{Int32}, Ptr{UInt8}, Ptr{Int32}, Ptr{Ptr{Void}}, Ptr{Void}, Ptr{Void}), m_ptr, mnew_ptr, size(triangulation, 2), triangulation, elementNodeOffsets, typeOffsetsPerElement, numberings, field_old, field_new)

 return nothing
end



function getFieldShape(shape_type::Integer, order::Integer, dim::Integer)
# shape_type: 0 = Lagrange, 1 = SBP, 2 = SBPDG1

  change_shape = Ref{Bool}()
  ccall( (getFieldShape_name, pumi_libname), Ptr{Void}, (Cint, Cint, Cint, Ref{Bool}), shape_type, order, dim, change_shape)

end


function countPeers(m_ptr, dim)
# get the number of other parts that have the entities of the specified
# dimension in common with this part

 npeers = ccall( (countPeers_name, pumi_libname), Csize_t, (Ptr{Void}, Cint), m_ptr, dim)

 return npeers
end

function getPeers(m_ptr, part_nums::Array{Cint})

  ccall( (getPeers_name, pumi_libname), Void, (Ptr{Void}, Ptr{Cint}), m_ptr, part_nums)

  return nothing
end

function isShared(m_ptr, e_ptr)

  val = ccall( (isShared_name, pumi_libname), Cint, (Ptr{Void}, Ptr{Void}), m_ptr, e_ptr)
  return val != 0
end

function countRemotes(m_ptr, entity)

  nremotes = ccall( (countRemotes_name, pumi_libname), Csize_t, (Ptr{Void}, Ptr{Void}), m_ptr, entity)

  return nremotes
end

function getRemotes(partnums::Array{Cint}, entities::Array{Ptr{Void}})
  
  ccall( (getRemotes_name, pumi_libname), Void, (Ptr{Cint}, Ptr{Ptr{Void}}), partnums, entities)

  return nothing
end

function setPoint(m_ptr, entity, node, coords::AbstractArray{Float64})
# coords must be of length 3, even in 2D
  @assert length(coords) == 3

  ccall((setPoint_name, pumi_libname), Void, (Ptr{Void}, Ptr{Void}, Cint, Ptr{Float64}), m_ptr, entity, node, coords)

  return nothing
end

function setParam(m_ptr, entity, coords::AbstractArray{Float64})
  @assert length(coords) >= 2

  ccall((:setParam, pumi_libname), Void, (Ptr{Void}, Ptr{Void}, Ptr{Float64}), m_ptr, entity, coords)

  return nothing
end



function acceptChanges(m_ptr)

  ccall( (acceptChanges_name, pumi_libname), Void, (Ptr{Void},), m_ptr)
  return nothing
end

function Verify(m_ptr)

  ccall( (Verify_name, pumi_libname), Void, (Ptr{Void},), m_ptr)
  return nothing
end

function getPoint(m_ptr, entity, node, coords::AbstractArray{Float64})
# coords must be of length 3, even in 2D
  @assert length(coords) == 3

  ccall((getPoint_name, pumi_libname), Void, (Ptr{Void}, Ptr{Void}, Cint, Ptr{Float64}), m_ptr, entity, node, coords)

  return nothing
end

function getParam(m_ptr, entity, coords::AbstractArray{Float64})
  @assert length(coords) >= 2

  ccall((:getParam, pumi_libname), Void, (Ptr{Void}, Ptr{Void}, Ptr{Float64}), m_ptr, entity, coords)

  return nothing
end



function hasMatching(m_ptr::Ptr{Void})

  val = ccall( (hasMatching_name, pumi_libname), CppBool, (Ptr{Void},), m_ptr)

  return val != 0
end

function getSharing(m_ptr)

  shr = ccall( (getSharing_name, pumi_libname), Ptr{Void}, (Ptr{Void},), m_ptr)

  return shr
end


function getNormalSharing(m_ptr)

  shr = ccall( (getNormalSharing_name, pumi_libname), Ptr{Void}, (Ptr{Void},), m_ptr)

  return shr
end


function freeSharing(shr_ptr::Ptr{Void})

  val = ccall( (freeSharing_name, pumi_libname), Void, (Ptr{Void},), shr_ptr)

end

function isOwned(shr_ptr, entity)

  val = ccall( (isOwned_name, pumi_libname), CppBool, (Ptr{Void}, Ptr{Void}), shr_ptr, entity)

  return val != 0
end

function countCopies(shr_ptr, entity)

  val = ccall( (countCopies_name, pumi_libname), Csize_t, (Ptr{Void}, Ptr{Void}), shr_ptr, entity)

  return val
end

function getCopies(part_nums::AbstractArray{Cint}, entities::AbstractArray{Ptr{Void}})
# as usual, the arrays must be the right length, as defined by countCopies
# the entities returned correspond to the entity passed in from the most recent
# call to countCopies

  ccall( (getCopies_name, pumi_libname), Void, (Ptr{Cint}, Ptr{Ptr{Void}}), part_nums, entities)

end


function getOwner(shr_ptr, entity)

  val = ccall( (getOwner_name, pumi_libname), Cint, (Ptr{Void}, Ptr{Void}), shr_ptr, entity)

  return val
end


function isSharedShr(shr_ptr, entity)

  val = ccall( (isSharedShr_name, pumi_libname), CppBool, (Ptr{Void}, Ptr{Void}), shr_ptr, entity)

  return val != 0
end



function countMatches(m_ptr, entity)

  val = ccall( (countMatches_name, pumi_libname), Csize_t, (Ptr{Void}, Ptr{Void}), m_ptr, entity)

  return val
end

function getMatches(part_nums::AbstractArray{Cint}, entities::AbstractArray{Ptr{Void}})
# as usual, the arrays must be the right length, as defined by countMatches
# the entities returned correspond to the entity passed in from the most recent
# call to countMatches

  ccall( (getMatches_name, pumi_libname), Void, (Ptr{Cint}, Ptr{Ptr{Void}}), part_nums, entities)

end


"""
  Get information about the Pumi reference element
"""
function getTopologyMaps()

  tri_edge_verts = Array{Cint}(3, 2)
  tet_edge_verts = Array{Cint}(6, 2)
  tet_tri_verts = Array{Cint}(4, 3)

  ccall( (:getTopologyMaps, pumi_libname), Void, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), tri_edge_verts, tet_edge_verts, tet_tri_verts)

  return tri_edge_verts, tet_edge_verts, tet_tri_verts
end


"""
  Create a submesh, returning an object that contains information about the
  relation between the elements of the two meshes

  **Inputs**

   * m_ptr: :Mesh* for existing mesh
   * numberings: array of 0-based :Numberings, of length mesh.dim + 1, numbering
     the entities of dimension 0 to dim
   * el_list: array of Cint element numbers (in the numberings[end] numbering)
              that will exist on the new mesh

  **Output**
  
   * SubMeshData: type containing information relating the old mesh and the
                  new mesh
"""
function createSubMesh(m_ptr::Ptr{Void}, numberings::AbstractArray{Ptr{Void}},
                       el_list::AbstractArray{Cint})

  sdata = ccall( (:createSubMesh2, pumi_libname), Ptr{Void}, (Ptr{Void}, Ptr{Ptr{Void}}, Ptr{Cint}, Cint), m_ptr, numberings, el_list, length(el_list))

  return SubMeshData(sdata)
end

"""
  Writes the new mesh (created by [`createSubMesh`](@ref) to a file

  **Inputs**

   * sdata: SubMeshData
   * fname: file name, including .smb extension

"""
function writeNewMesh(sdata::SubMeshData, fname::AbstractString)

  ccall( (:writeNewMesh, pumi_libname), Void, (SubMeshData, Cstring), sdata, fname)
end

"""
  Get the :Mesh* of the new mesh

  **Inputs**

   * sdata: SubMeshData

  **Outputs**

   * a :Mesh*
"""
function getNewMesh(sdata::SubMeshData)

  m_ptr = ccall( (:getNewMesh, pumi_libname), Ptr{Void}, (SubMeshData,), sdata)
  return m_ptr
end

"""
  Get the original mesh pointer.
"""
function getOldMesh(sdata::SubMeshData)

  m_ptr = ccall( (:getOldMesh, pumi_libname), Ptr{Void}, (SubMeshData,), sdata)
  return m_ptr
end


"""
  Returns an :Numbering* for a Numbering on the submesh containing the
  element number on the original mesh that each element came from.
"""
function getParentNumbering(sdata::SubMeshData)

  n_ptr = ccall( (:getParentNumbering, pumi_libname), Ptr{Void}, (SubMeshData,), sdata)
  return n_ptr
end

function getGeoTag(sdata::SubMeshData)

  new_geo = ccall( (:getGeoTag, pumi_libname), Cint, (SubMeshData,), sdata)
  return new_geo
end


function free(sdata::SubMeshData)

  n_ptr = ccall( (:freeSubMesh2, pumi_libname), Void, (SubMeshData,), sdata)
  return n_ptr
end

function printTags(m_ptr::Ptr{Void})

  ccall( (:printTags, pumi_libname), Void, (Ptr{Void},), m_ptr)
end


include("apf2.jl")  # higher level functions
end  # end of module
